test/visibility/rename/renameUsedMod/renameMultiple2.good
renameMultiple2.chpl:16: In function 'main':
renameMultiple2.chpl:22: error: 'First' undeclared (first used this function)
